--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>    
+    <meta charset="utf-8">
     <title>Akwarium</title>   
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
@@ -8,7 +9,7 @@
     Ryby:
     <div class=ryba><a href="ryby/nemo.html">Nemo </a></div>
     <div class=ryba><a href="ryby/paletkazielona.html">Paletka zielona </a></div>
-    <div class=ryba><a href="ryby/kasaczowate.html">kąsatowate </a></div><br>
+    <div class=ryba><a href="ryby/kasaczowate.html">Kąsaczowate </a></div><br>
     Rośliny:
     <div class=roslina><a href="rosliny/mechjawajski.html">Mech jawajski </a></div>
     <div class=roslina><a href="rosliny/lotostygrysi.html">Lotos Tygrysi </a></div>
