--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Ryby:
     <div class=ryba><a href="ryby/nemo.html">Nemo </a></div>
     <div class=ryba><a href="ryby/paletkazielona.html">Paletka zielona </a></div>
-    <div class=ryba><a href="ryby/kasaczowate.html">kąsatowate </a></div><br>
+    <div class=ryba><a href="ryby/kasaczowate.html">Kąsaczowate </a></div><br>
     Rośliny:
     <div class=roslina><a href="rosliny/mechjawajski.html">Mech jawajski </a></div>
     <div class=roslina><a href="rosliny/lotostygrysi.html">Lotos Tygrysi </a></div>
