zmiana na listy

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   </head>
   <body>
     Ryby:
-    <div class=ryba><a href="ryby/nemo.html">Nemo </a></div>
-    <div class=ryba><a href="ryby/paletkazielona.html">Paletka zielona </a></div>
-    <div class=ryba><a href="ryby/kasaczowate.html">Kąsaczowate </a></div><br>
+    <ul>
+      <li class=ryba><a href="ryby/nemo.html">Nemo </a></li>
+      <li class=ryba><a href="ryby/paletkazielona.html">Paletka zielona </a></li>
+      <li class=ryba><a href="ryby/kasaczowate.html">Kąsaczowate </a></li><br>
+    </ul>
     Rośliny:
-    <div class=roslina><a href="rosliny/mechjawajski.html">Mech jawajski </a></div>
-    <div class=roslina><a href="rosliny/lotostygrysi.html">Lotos Tygrysi </a></div>
-    <div class=roslina><a href="rosliny/galezatkakulista.html">Gałęzatka kulista </a></div>
-        
+    <ul>
+      <li class=roslina><a href="rosliny/mechjawajski.html">Mech jawajski </a></li>
+      <li class=roslina><a href="rosliny/lotostygrysi.html">Lotos Tygrysi </a></li>
+      <li class=roslina><a href="rosliny/galezatkakulista.html">Gałęzatka kulista </a></li>
+    </ul>
   </body>
 </html>
